--- a/pandas_zeitreihen.ipynb
+++ b/pandas_zeitreihen.ipynb
@@ -115,7 +115,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv(\"../udemy/Kursmaterialien/data/Temperature/GlobalLandTemperaturesByMajorCity.csv.bz2\")\n",
+    "df = pd.read_csv(\"./data/Temperature/GlobalLandTemperaturesByMajorCity.csv.bz2\")\n",
     "df.head()"
    ]
   },
