--- a/syslog_analyzer.ipynb
+++ b/syslog_analyzer.ipynb
@@ -10,7 +10,7 @@
     "import os\n",
     "import zipfile\n",
     "\n",
-    "data_path = \"../udemy/Kursmaterialien/data/\"\n",
+    "data_path = \"./data/\"\n",
     "folder = \"syslog\"\n",
     "zip_file = folder + \".zip\"\n",
     "complete_path = os.path.join(data_path, folder)\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "fdd816ed-32ff-4afc-9955-dddefd915a50",
    "metadata": {},
    "outputs": [
@@ -59,7 +59,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "jupyter-notebooks",
    "language": "python",
    "name": "python3"
   },
