--- a/pandas_series.ipynb
+++ b/pandas_series.ipynb
@@ -198,7 +198,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"../udemy/Kursmaterialien/data/Temperature/GlobalLandTemperaturesByMajorCity.csv.bz2\")\n",
+    "df = pd.read_csv(\"./data/Temperature/GlobalLandTemperaturesByMajorCity.csv.bz2\")\n",
     "df"
    ]
   },
@@ -1981,7 +1981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "id": "5d0a272b-8684-459a-8c5f-7d52951a60af",
    "metadata": {},
    "outputs": [],
@@ -1992,7 +1992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "id": "11541b6e-4d4c-46dc-be0f-e2273c87cc79",
    "metadata": {},
    "outputs": [
@@ -2184,7 +2184,7 @@
        "[239177 rows x 8 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2204,7 +2204,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "jupyter-notebooks",
    "language": "python",
    "name": "python3"
   },
