--- a/pandas_sortieren.ipynb
+++ b/pandas_sortieren.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "cb52b187-ed1f-47ff-a618-380e27e16f2f",
    "metadata": {},
    "outputs": [
@@ -182,7 +182,7 @@
        "[228175 rows x 7 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "cd2ebd12-201d-4af7-85b9-978fd4199bbf",
    "metadata": {},
    "outputs": [
@@ -378,7 +378,7 @@
        "[228175 rows x 7 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +399,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "jupyter-notebooks",
    "language": "python",
    "name": "python3"
   },
