--- a/spam.ipynb
+++ b/spam.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "fb64f2be-5524-42ac-b773-40805cc791d5",
    "metadata": {},
    "outputs": [],
@@ -10,7 +10,7 @@
     "import os\n",
     "import zipfile\n",
     "\n",
-    "data_path = \"../udemy/Kursmaterialien/data/\"\n",
+    "data_path = \"./data/\"\n",
     "spam_folder_name = \"Spam-Emails\"\n",
     "spam_data_path = data_path + spam_folder_name\n",
     "zip_file = spam_folder_name + \".zip\"\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "7801e730-ad17-4834-9f1a-4b71997ff865",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "0e9f16c8-b046-4779-aec4-c6367fadf087",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "aa366b07-e694-4341-8ed0-72f7333cafcc",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "88c12a35-d27d-40aa-95b5-187807636383",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "08c98a02-799d-4210-b2a2-f157bfbde2d4",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 7,
    "id": "a1607fe0-3d75-4217-bab6-e57e736fa443",
    "metadata": {},
    "outputs": [],
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 8,
    "id": "a9fbd804-6d3f-4de8-bf65-5a673a623797",
    "metadata": {},
    "outputs": [
@@ -107,8 +107,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.534\n",
-      "0.1036\n"
+      "0.602\n",
+      "0.1068\n"
      ]
     }
    ],
@@ -131,7 +131,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "jupyter-notebooks",
    "language": "python",
    "name": "python3"
   },
